# satellite-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml
data/magnetic/: wmm2025.wmm
earth/: CMakeLists.txt  Dockerfile  main.cpp
earth/include/: EarthMagneticModel.h  Types.h  WMMModel.h
earth/src/: EarthMagneticModel.cpp  WMMModel.cpp
earth/test/: CMakeLists.txt  test.cpp
satellite/: CMakeLists.txt  Dockerfile  main.cpp
satellite/include/: SatelliteSimulation.h
satellite/src/: SatelliteSimulation.cpp
satellite/test/: CMakeLists.txt  test.cpp
server/: CMakeLists.txt  Dockerfile  main.cpp
server/include/: Server.h  ServerTypes.h
server/include/handlers/: Simulate.h
server/src/: Server.cpp
server/src/handlers/: Simulate.cpp
